<resources>
    <string name="app_name">Stocktaking</string>
    <string name="scan_qrcode_tips">Scan QR Code</string>
    <string name="github_address">https://github.com/arnozhang/android-zxing-demo</string>
    <string name="light">Light</string>
    <string name="stocktaking">stocktacking.realm</string>
    <string name="scan">Scan</string>
    <string name="download_nbarcodes">download barcodes</string>
    <string name="parse">Parse</string>
    <string name="manual_barcode_qr_enter">Manual barcode/Ftp ip</string>
    <string name="find_code">Find code</string>
    <string name="max_memory_heap">Max Memory Heap:</string>
    <string name="id">ID:</string>
    <string name="barcode">Barcode:</string>
    <string name="name">Name:</string>
    <string name="vcode">Vendor Code:</string>
    <string name="amount">Amount:</string>
    <string name="price">Price:</string>
    <string name="box_number">Box Number:</string>
    <string name="input_file_was_not_found">input file was not found</string>
    <string name="scan_canceled">Scan Canceled!</string>
    <string name="nothing_found">Nothing found</string>
    <string name="no_internet">No internet, sorry</string>
</resources>
